--- a/api-automation.ipynb
+++ b/api-automation.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "0d4b748d-2107-4ab4-9cb3-2ec4ceb3a7e1",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
      "output_type": "stream",
      "text": [
       "headers:{'Content-Type': 'application/json', 'Authorization': ''}\n",
-      "url:https://api.jiohome.jio.com/jh-frontend/app/health\n",
+      "url:https://reqres.in/api/users?page=2\n",
       "payload:None\n",
       "method:GET\n"
      ]
@@ -98,16 +98,51 @@
     {
      "data": {
       "text/plain": [
-       "{'success': True, 'message': 'Running'}"
+       "{'page': 2,\n",
+       " 'per_page': 6,\n",
+       " 'total': 12,\n",
+       " 'total_pages': 2,\n",
+       " 'data': [{'id': 7,\n",
+       "   'email': 'michael.lawson@reqres.in',\n",
+       "   'first_name': 'Michael',\n",
+       "   'last_name': 'Lawson',\n",
+       "   'avatar': 'https://reqres.in/img/faces/7-image.jpg'},\n",
+       "  {'id': 8,\n",
+       "   'email': 'lindsay.ferguson@reqres.in',\n",
+       "   'first_name': 'Lindsay',\n",
+       "   'last_name': 'Ferguson',\n",
+       "   'avatar': 'https://reqres.in/img/faces/8-image.jpg'},\n",
+       "  {'id': 9,\n",
+       "   'email': 'tobias.funke@reqres.in',\n",
+       "   'first_name': 'Tobias',\n",
+       "   'last_name': 'Funke',\n",
+       "   'avatar': 'https://reqres.in/img/faces/9-image.jpg'},\n",
+       "  {'id': 10,\n",
+       "   'email': 'byron.fields@reqres.in',\n",
+       "   'first_name': 'Byron',\n",
+       "   'last_name': 'Fields',\n",
+       "   'avatar': 'https://reqres.in/img/faces/10-image.jpg'},\n",
+       "  {'id': 11,\n",
+       "   'email': 'george.edwards@reqres.in',\n",
+       "   'first_name': 'George',\n",
+       "   'last_name': 'Edwards',\n",
+       "   'avatar': 'https://reqres.in/img/faces/11-image.jpg'},\n",
+       "  {'id': 12,\n",
+       "   'email': 'rachel.howell@reqres.in',\n",
+       "   'first_name': 'Rachel',\n",
+       "   'last_name': 'Howell',\n",
+       "   'avatar': 'https://reqres.in/img/faces/12-image.jpg'}],\n",
+       " 'support': {'url': 'https://contentcaddy.io?utm_source=reqres&utm_medium=json&utm_campaign=referral',\n",
+       "  'text': 'Tired of writing endless social media content? Let Content Caddy generate it for you.'}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url = \"https://api.jiohome.jio.com/jh-frontend/app/health\"\n",
+    "url = \"https://reqres.in/api/users?page=2\"\n",
     "method = \"GET\"\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
@@ -121,6 +156,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "479b17c6-5211-4144-b61f-695dbe2b8c0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aa1b052-17f4-4b8d-b3ea-2a40fa08250b",
    "metadata": {},
    "outputs": [],
    "source": []
