added main method

--- a/api-automation.ipynb
+++ b/api-automation.ipynb
@@ -3,9 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "b0ac8f8a-dc2b-415e-96d8-370770c38b02",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "This notebook is all about hiting an API with given field values to be read from an excel/csv file"
+    "### This notebook is all about hiting an API with given field values to be read from an excel/csv file"
    ]
   },
   {
@@ -13,7 +15,7 @@
    "id": "0faef697-672a-48bc-84f3-7557034f4190",
    "metadata": {},
    "source": [
-    "Importing Libraries"
+    "## Importing Libraries"
    ]
   },
   {
@@ -33,7 +35,7 @@
    "id": "6bdbfbb0-81a3-466b-b6a7-344fdb888001",
    "metadata": {},
    "source": [
-    "Method to read excel file"
+    "## Method to read excel file"
    ]
   },
   {
@@ -53,7 +55,7 @@
    "id": "305c714f-441b-4abe-a806-8c7ceb2a9ebb",
    "metadata": {},
    "source": [
-    "Method to call API"
+    "## Method to call API"
    ]
   },
   {
@@ -80,93 +82,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "0d4b748d-2107-4ab4-9cb3-2ec4ceb3a7e1",
+   "cell_type": "markdown",
+   "id": "701d5de1-5e56-46d3-9dda-809038e82c18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "headers:{'Content-Type': 'application/json', 'Authorization': ''}\n",
-      "url:https://reqres.in/api/users?page=2\n",
-      "payload:None\n",
-      "method:GET\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'page': 2,\n",
-       " 'per_page': 6,\n",
-       " 'total': 12,\n",
-       " 'total_pages': 2,\n",
-       " 'data': [{'id': 7,\n",
-       "   'email': 'michael.lawson@reqres.in',\n",
-       "   'first_name': 'Michael',\n",
-       "   'last_name': 'Lawson',\n",
-       "   'avatar': 'https://reqres.in/img/faces/7-image.jpg'},\n",
-       "  {'id': 8,\n",
-       "   'email': 'lindsay.ferguson@reqres.in',\n",
-       "   'first_name': 'Lindsay',\n",
-       "   'last_name': 'Ferguson',\n",
-       "   'avatar': 'https://reqres.in/img/faces/8-image.jpg'},\n",
-       "  {'id': 9,\n",
-       "   'email': 'tobias.funke@reqres.in',\n",
-       "   'first_name': 'Tobias',\n",
-       "   'last_name': 'Funke',\n",
-       "   'avatar': 'https://reqres.in/img/faces/9-image.jpg'},\n",
-       "  {'id': 10,\n",
-       "   'email': 'byron.fields@reqres.in',\n",
-       "   'first_name': 'Byron',\n",
-       "   'last_name': 'Fields',\n",
-       "   'avatar': 'https://reqres.in/img/faces/10-image.jpg'},\n",
-       "  {'id': 11,\n",
-       "   'email': 'george.edwards@reqres.in',\n",
-       "   'first_name': 'George',\n",
-       "   'last_name': 'Edwards',\n",
-       "   'avatar': 'https://reqres.in/img/faces/11-image.jpg'},\n",
-       "  {'id': 12,\n",
-       "   'email': 'rachel.howell@reqres.in',\n",
-       "   'first_name': 'Rachel',\n",
-       "   'last_name': 'Howell',\n",
-       "   'avatar': 'https://reqres.in/img/faces/12-image.jpg'}],\n",
-       " 'support': {'url': 'https://contentcaddy.io?utm_source=reqres&utm_medium=json&utm_campaign=referral',\n",
-       "  'text': 'Tired of writing endless social media content? Let Content Caddy generate it for you.'}}"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "url = \"https://reqres.in/api/users?page=2\"\n",
-    "method = \"GET\"\n",
-    "headers = {\n",
-    "    \"Content-Type\": \"application/json\",\n",
-    "    \"Authorization\": \"\"\n",
-    "}\n",
-    "\n",
-    "call_api(url, None, headers, method)"
+    "# Process Excel File read values create payload and call API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "fb34826d-7115-4306-bfa3-97b9d0f4b736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_excel_and_call_api(file_path, output_file):\n",
+    "    \"\"\"Reads an Excel file, extracts structured data, makes API calls, and saves responses.\"\"\"\n",
+    "    df = read_excel(file_path)\n",
+    "    df[\"response\"] = \"\"  # Add a new column for storing responses\n",
+    "    \n",
+    "    for index, row in df.iterrows():\n",
+    "        \n",
+    "        api_url = f\"<your url in case of dependency of excel data in path params>\"\n",
+    "        \n",
+    "        payload = {\n",
+    "            # build the payload here\n",
+    "        }\n",
+    "        # set your headers here\n",
+    "        headers = {\n",
+    "            \"Content-Type\": \"application/json\" \n",
+    "        }\n",
+    "        method = \"GET\" # your method\n",
+    "        response = call_api(api_url, payload, headers, method)\n",
+    "        df.at[index, \"response\"] = str(response)  # Store the response in the new column\n",
+    "        print(f\"Response: {response}\")\n",
+    "    \n",
+    "    \n",
+    "    df.to_excel(output_file, index=False)  # Save the updated DataFrame to a new Excel file\n",
+    "    print(f\"Results saved to {output_file}\")\n",
+    "    \n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cdddea8-99af-4617-af3d-6265969ca459",
+   "metadata": {},
+   "source": [
+    "## Main Method"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "479b17c6-5211-4144-b61f-695dbe2b8c0c",
+   "id": "9ad71d9a-186c-4967-94c4-30746f2451f5",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4aa1b052-17f4-4b8d-b3ea-2a40fa08250b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    input_file = \"data.xlsx\"\n",
+    "    output_file = \"result.xlsx\"\n",
+    "    process_excel_and_call_api(input_file, output_file)"
+   ]
   }
  ],
  "metadata": {
